--- a/mink_kod_z5_1.html
+++ b/mink_kod_z5_1.html
@@ -14,7 +14,7 @@
  @import url("mink_z5_1.css");
  </style>
 </head>
-<body bgcolor="teal" >
+<body bgcolor="silver" >
  <p>MInkiewicz- Programowanie to proces tworzenia, testowania oraz utrzymania kodu źródłowego</p>
 <!-- MInkiewicz 03.01.2024 -->
 </body>
