--- a/mink_kod_z5_2.html
+++ b/mink_kod_z5_2.html
@@ -12,7 +12,7 @@
 <!-- zewnetrzne -->
  <LINK href="mink_z5_z2.css" rel="stylesheet" type="text/CSS">
 </head>
-<body bgcolor="teal">
+<body bgcolor="black">
  <p> MInkiewicz-
   <br>
   Programowanie wymaga logicznego myślenia i kreatywnego podejścia do rozwiązywania problemów.
