--- a/mink_kod_z5_3.html
+++ b/mink_kod_z5_3.html
@@ -12,7 +12,7 @@
 <!-- liniowy -->
 </head>
 <body bgcolor="silver">
- <p style="color: teal; font-size: 37px;"> 
+ <p style="color: black; font-size: 37px;"> 
 MInkiewicz-
   <br>
 CSS to kaskadowe arkusze stylów. Za ich pomocą informuje się przeglądarkę internetową, jak ma wyświetlać elementy strony ustrukturyzowane w języku HTML
