--- a/mink_kod_z5_4.html
+++ b/mink_kod_z5_4.html
@@ -17,7 +17,7 @@
  }
   </style>
 </head>
-  <body bgcolor="teal">
+  <body bgcolor="black">
     <p> MInkiewicz --<br>Skrót JS oznacza JavaScript</p>
  </body>
 </html>
