--- a/mink_kod_z5_1.html
+++ b/mink_kod_z5_1.html
@@ -24,7 +24,7 @@
             <h3><b>KOD CSS</b></h3>
             <textarea id="textarea" name="textarea" rows="10" cols="40">
       \p {
-    color: olive;
+    color: black;
     font-size: 67px;
      }
 /* 
