--- a/mink_z5_4.html
+++ b/mink_z5_4.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- liniowy -->
 </head>
-<body bgcolor="silver">
- <p style="color: teal; font-size: 37px;"> 
+<body bgcolor="teal">
+ <p style="color: black; font-size: 37px;"> 
 MInkiewicz    -
   <br>
 CSS to kaskadowe arkusze stylów. Za ich pomocą informuje się przeglądarkę internetową, jak ma wyświetlać elementy strony ustrukturyzowane w języku HTML
