--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET="utf-8  ">
-<META charset="UTF-8">  
+
 </head>
 <body>
 <META charset="UTF-8"> 
@@ -18,13 +18,13 @@
 <br>
 <a href="zadanie4_mink.html" target="strony">Zadanie4</a>
 <br>
-<a href="mink_z5_1.html" target="strony">Z5-importowany</a>
+<a href="mink_z5_1.html" target="strony">Zzadanie5_1</a>
 <br>
-<a href="mink_z5_2.html" target="strony">Z5-zewnetrzny</a>
+<a href="mink_z5_2.html" target="strony">Zadanie5_2</a>
 <br>
-<a href="mink_z5_3.html" target="strony">Z5-wewnetrzna</a>
+<a href="mink_z5_3.html" target="strony">Zadanie5_3</a>
 <br>
-<a href="mink_z5_4.html" target="strony">Z5-liniowy</a>
+<a href="mink_z5_4.html" target="strony">Zadanie5_4</a>
 <br>
 <a href="zadanie6_mink.html" target="strony">Zadanie6</a>
 <br>
