--- a/mink_kod_z5_2.html
+++ b/mink_kod_z5_2.html
@@ -12,7 +12,7 @@
 <!-- zewnetrzne -->
  <LINK href="mink_z5_z2.css" rel="stylesheet" type="text/CSS">
 </head>
-<body bgcolor="black">
+<body bgcolor="teal">
  <p> MInkiewicz-
   <br>
   Programowanie wymaga logicznego myślenia i kreatywnego podejścia do rozwiązywania problemów.
@@ -25,8 +25,8 @@
             <h3><b>KOD CSS</b></h3>
             <textarea id="textarea" name="textarea" rows="9" cols="40">
 p {
-    color: navy;
-    font-size: 47px;
+    color: green;
+    font-size: 55px;
      }
     
 /* 
