--- a/mink_kod_z5_3.html
+++ b/mink_kod_z5_3.html
@@ -11,11 +11,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- liniowy -->
 </head>
-<body bgcolor="silver">
- <p style="color: black; font-size: 37px;"> 
+<body bgcolor="teal">
+ <p style="color: black; font-size: 65px;"> 
 MInkiewicz-
   <br>
-CSS to kaskadowe arkusze stylów. Za ich pomocą informuje się przeglądarkę internetową, jak ma wyświetlać elementy strony ustrukturyzowane w języku HTML
+  w JS jesteśmy w stanie zapisać dowolny fragment kodu używając tylko 6 (sic!) znaków
 </p>
  </body>
 </html>
