--- a/mink_kod_z5_4.html
+++ b/mink_kod_z5_4.html
@@ -12,12 +12,12 @@
 <!-- wewnetrzny -->
  <style>
  p {
- color: teal;
+ color: black;
  font-size: 57px;
  }
   </style>
 </head>
-  <body bgcolor="black">
+  <body bgcolor="teal">
     <p> MInkiewicz --<br>Skrót JS oznacza JavaScript</p>
  </body>
 </html>
