--- a/mink_z13kod.html
+++ b/mink_z13kod.html
@@ -8,7 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="doln_z13.css" type="text/CSS">
+    <link rel="stylesheet" href="mink_z13.css" type="text/CSS">
 </head>
 <body>
     <p>:( smutna budźka</p>
