--- a/mink_z5_1.html
+++ b/mink_z5_1.html
@@ -9,7 +9,7 @@
  </style>
 </head>
 <body bgcolor="teal" >
- <p>Minkiewicz- Programowanie to proces tworzenia, testowania oraz utrzymania kodu źródłowego</p>
+ <p bgcolor="black">Minkiewicz- Programowanie to proces tworzenia, testowania oraz utrzymania kodu źródłowego</p>
 <!-- Minkiewicz 03.01.2024 -->
 </body>
 </html>
