--- a/mink_z5_2.html
+++ b/mink_z5_2.html
@@ -4,6 +4,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- zewnetrzne -->
  <LINK href="mink_z5_z2.css" rel="stylesheet" type="text/CSS">
+    <style>
+        p {
+        color: black;
+        font-size: 57px;
+       
+    }
+    </style>
 </head>
 <body bgcolor="teal">
  <p> MInkiewicz-- 
