--- a/mink_z5_3.html
+++ b/mink_z5_3.html
@@ -13,7 +13,7 @@
 <body bgcolor="teal">
  <p> Minkiewicz -
   <br>
-  Skrót JS oznacza JavaScript
+  CSS oznacza Cascading Style Sheets i oznacza kaskadowe arkusze stylów
  </p>
  </body>
 </html>
