--- a/mink_z6kod.html
+++ b/mink_z6kod.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 </head>
 <body>
     <H1>KOD HTML</H1>
@@ -10,17 +10,17 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="doln_z6.css">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
+    <link rel="stylesheet" href="mink_z6.css">
     <title>Emotikony</title>
 </head>
 <body>
-    <p>:P wytknięty język</p>
-     :D szeroki uśmiech
-    <p>;) mrugnięcie</p>
-    :O zdziwienie
-    <p>:| obojętność</p>
-    :) uśmiech
+    <p>XD śmiech</p>
+    :D szeroki uśmiech
+    <p>:( smutek</p>
+    :/ grymas
+    <p>:| niezdecydowanie</p>
+    :c duży smutek
 
 </body>
 </html>
