--- a/zadanie15_mink.html
+++ b/zadanie15_mink.html
@@ -7,12 +7,12 @@
     <title>Emotikony</title>
 </head>
 <body>
-    <p>:P wytknięty język</p>
-     :D szeroki uśmiech
-    <p>;) mrugnięcie</p>
-    :O zdziwienie
-    <p>:| obojętność</p>
-    :) uśmiech
+    <p>XD śmiech</p>
+    :D szeroki uśmiech
+    <p>:( smutek</p>
+    :/ grymas
+    <p>:| niezdecydowanie</p>
+    :c duży smutek
 
 </body>
 </html>
