--- a/mink_kod_z5_1.html
+++ b/mink_kod_z5_1.html
@@ -24,8 +24,8 @@
             <h3><b>KOD CSS</b></h3>
             <textarea id="textarea" name="textarea" rows="10" cols="40">
       \p {
-    color: black;
-    font-size: 67px;
+    color: olive;
+    font-size: 75px;
      }
 /* 
 03.01.2024 Minkiewicz
