--- a/mink_z15kod.html
+++ b/mink_z15kod.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="doln_z15.css">
+    <link rel="stylesheet" href="mink_z15.css">
     <title>Emotikony</title>
 </head>
 <body>
