--- a/mink_z5_4.html
+++ b/mink_z5_4.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>styl zewnetrzne</title>
+<title>Styl zewnetrzny</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- liniowy -->
 </head>
-<body bgcolor="teal">
+<body bgcolor="teal ">
  <p style="color: black; font-size: 37px;"> 
 MInkiewicz    -
   <br>
