--- a/mink_z5_z3.html
+++ b/mink_z5_z3.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-<title>styl wewnetrzny</title>
+<title>Styl wewnetrzny</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <META charset="UTF-8"> 
 <!-- wewnetrzny -->
  <style>
  p {
- color: teal;
- font-size: 65px;
+ color: black;
+ font-size: 60px;
  }
 </style>
 </head>
-<body bgcolor="silver">
+<body bgcolor="teal">
  <p> Minkiewicz -> wewnętrzne
   <br>
   Programowanie jest nieustannie rozwijającą się dziedziną, która zmienia sposób, w jaki żyjemy i pracujemy.
