--- a/zadanie14_mink.html
+++ b/zadanie14_mink.html
@@ -1,4 +1,3 @@
-<!--Dolny 15.12.2023-->
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -26,3 +25,4 @@
 </table>
 </body>
 </html>
+<!--MInkieiwcz 31.12.2023-->
